--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <header>
+        <p>ini harusnya selalu diatas. konsep menu urut dari kiri ke kanan</p>
         <nav>
             <ul>
                 <li>Home</li>
@@ -28,7 +29,7 @@
         </aside>
     </main>
     <footer>
-        <p>ini footer</p>
+        <p>ini footer ini harusnya selalu dibawah</p>
     </footer>
 </body>
 </html>
