update css dan index

--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dicoding submission</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <header>
         <p>ini harusnya selalu diatas. konsep menu urut dari kiri ke kanan</p>
-        <nav>
-            <ul>
-                <li>Home</li>
-                <li>About</li>
-            </ul>
+        <nav class="navbar">
+            <div><a href=""><p>HOME</p></a></div>
+            <div><a href=""><p>ABOUT</p></a></div>
+            <div><a href=""><p>PRICING</p></a></div>
+            <div><a href=""><p>PROMO</p></a></div>
         </nav>
     </header>
     <main>
@@ -25,7 +27,7 @@
             </article>
         </div>
         <aside>
-            
+            <p>ini aside</p>
         </aside>
     </main>
     <footer>
