--- a/index.html
+++ b/index.html
@@ -4,17 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dicoding submission</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
 
 </head>
 <body>
     <header>
-        <p>ini harusnya selalu diatas. konsep menu urut dari kiri ke kanan</p>
         <nav class="navbar">
-            <div><a href=""><p>HOME</p></a></div>
+<!--             <div><a href=""><p>HOME</p></a></div>
             <div><a href=""><p>ABOUT</p></a></div>
             <div><a href=""><p>PRICING</p></a></div>
-            <div><a href=""><p>PROMO</p></a></div>
+            <div><a href=""><p>PROMO</p></a></div> -->
+            <ul>
+                <li><a href="#"></a>HOME</li>
+                <li><a href="#"></a>ABOUT</li>
+                <li><a href="#"></a>PROJECT</li>
+                <li><a href="#"></a>CONTACT</li>
+            </ul>
         </nav>
     </header>
     <main>
@@ -26,9 +31,12 @@
                 <p>ini artikel 2</p>
             </article>
         </div>
-        <aside>
-            <p>ini aside</p>
-        </aside>
+        <div>
+            <aside>
+                <p>ini aside</p>
+            </aside>
+        </div>
+
     </main>
     <footer>
         <p>ini footer ini harusnya selalu dibawah</p>
