--- a/index.html
+++ b/index.html
@@ -3,43 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dicoding submission</title>
-    <link rel="stylesheet" href="style2.css">
-
+    <title>TA Membuat Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <nav class="navbar">
-<!--             <div><a href=""><p>HOME</p></a></div>
-            <div><a href=""><p>ABOUT</p></a></div>
-            <div><a href=""><p>PRICING</p></a></div>
-            <div><a href=""><p>PROMO</p></a></div> -->
-            <ul>
-                <li><a href="#"></a>HOME</li>
-                <li><a href="#"></a>ABOUT</li>
-                <li><a href="#"></a>PROJECT</li>
-                <li><a href="#"></a>CONTACT</li>
-            </ul>
+        <img src="image/logo.svg" alt="logo icon">
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Product</a>
+            <a href="#">Contact</a>
         </nav>
     </header>
     <main>
-        <div>
+        <div class="content">
             <article>
-                <p>ini artikel 1</p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt corrupti aperiam ducimus illo saepe animi tempore placeat nobis! Provident odio quaerat alias a quod tempore mollitia reiciendis, repudiandae impedit aliquid.
             </article>
             <article>
-                <p>ini artikel 2</p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt corrupti aperiam ducimus illo saepe animi tempore placeat nobis! Provident odio quaerat alias a quod tempore mollitia reiciendis, repudiandae impedit aliquid.
             </article>
         </div>
-        <div>
-            <aside>
-                <p>ini aside</p>
-            </aside>
-        </div>
-
+        <aside>
+            <!-- <img src="image/dono.jpg" alt="Dono"> -->
+        </aside>
     </main>
-    <footer>
-        <p>ini footer ini harusnya selalu dibawah</p>
-    </footer>
 </body>
 </html>
