add css reference

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </article>
         </div>
         <aside>
-            <!-- <img src="image/dono.jpg" alt="Dono"> -->
+            <img src="image/dono.jpg" alt="Dono">
         </aside>
     </main>
 </body>
