--- a/index.html
+++ b/index.html
@@ -3,33 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dicoding submission</title>
+    <title>TA Membuat Website</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="code.js"></script>
 </head>
 <body>
     <header>
-        <p>ini harusnya selalu diatas. konsep menu urut dari kiri ke kanan</p>
+        <div class="logo">
+            <a href="#"><h2><span>SAR</span>WANA</h2></a>
+        </div>
         <nav>
-            <ul>
-                <li>Home</li>
-                <li>About</li>
-            </ul>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Product</a>
+            <a href="#">Contact</a>
         </nav>
     </header>
+    <div class="banner">
+        <div class="sidebanner"><p> </p></div>
+        <img src="image/sbg.png" alt="Website banner">
+        <div class="carousel">
+                <h1>Lorem Ipsum</h1>
+                <p>this is just part of the banner but with text on them. i want to make it randomly changed from 1 to another. i want to make it more cool and fun to watch.</p>
+        </div>
+        <div class="sidebanner"><p> </p></div>
+    </div>
     <main>
-        <div>
+        <div class="content">
             <article>
-                <p>ini artikel 1</p>
+                <h1>Content 1</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id nisi ratione corporis ea quidem aspernatur recusandae necessitatibus. Sed dolor labore, deleniti magnam itaque rerum ipsa deserunt. Deleniti at cumque saepe!</p>
             </article>
             <article>
-                <p>ini artikel 2</p>
+                <h1>Content 2</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero laborum pariatur voluptates dolore eos, nemo atque quibusdam molestias praesentium deserunt magni quisquam sapiente facilis sint rerum obcaecati voluptatibus veritatis porro.</p>
+            </article>
+            <article>
+                <h1>Content 3</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam dolores voluptate quisquam nam. Temporibus, ratione nemo consequuntur consectetur ut minus quae, eveniet sapiente natus aut blanditiis similique quaerat porro repudiandae.</p>
             </article>
         </div>
         <aside>
-            
+            <img src="image/aside.jpg" alt="aside image">
         </aside>
     </main>
-    <footer>
-        <p>ini footer ini harusnya selalu dibawah</p>
-    </footer>
+
 </body>
 </html>
